Minor adjustments to Readme txt

--- a/assets/css/receipt.css
+++ b/assets/css/receipt.css
@@ -1,5 +1,5 @@
 .receipt-container {
-    margin: 0 auto;
+    margin-left: 0 auto;
     text-align: center;
     border: 1px solid #000 !important;
     box-sizing: border-box;
